src2/bsw-hipified/log_run_bench.err
In file included from driver.cu:5:
./kernel.cu:15:20: error: use of undeclared identifier '__ballot_sync'
   15 |   unsigned mask  = __ballot_sync(0xffffffff, threadIdx.x < lengthSeqB);  // blockDim.x
      |                    ^
./kernel.cu:19:21: error: use of undeclared identifier '__shfl_down_sync'; did you mean '__shfl_down'?
   19 |     short tempVal = __shfl_down_sync(mask, val, offset);
      |                     ^~~~~~~~~~~~~~~~
      |                     __shfl_down
/opt/rocm-6.2.0/include/hip/amd_detail/amd_warp_functions.h:342:14: note: '__shfl_down' declared here
  342 | unsigned int __shfl_down(unsigned int var, unsigned int lane_delta, int width = warpSize) {
      |              ^
In file included from driver.cu:5:
./kernel.cu:21:15: error: use of undeclared identifier '__shfl_down_sync'; did you mean '__shfl_down'?
   21 |     newInd  = __shfl_down_sync(mask, ind, offset);
      |               ^~~~~~~~~~~~~~~~
      |               __shfl_down
/opt/rocm-6.2.0/include/hip/amd_detail/amd_warp_functions.h:342:14: note: '__shfl_down' declared here
  342 | unsigned int __shfl_down(unsigned int var, unsigned int lane_delta, int width = warpSize) {
      |              ^
In file included from driver.cu:5:
./kernel.cu:22:15: error: use of undeclared identifier '__shfl_down_sync'; did you mean '__shfl_down'?
   22 |     newInd2 = __shfl_down_sync(mask, ind2, offset);
      |               ^~~~~~~~~~~~~~~~
      |               __shfl_down
/opt/rocm-6.2.0/include/hip/amd_detail/amd_warp_functions.h:342:14: note: '__shfl_down' declared here
  342 | unsigned int __shfl_down(unsigned int var, unsigned int lane_delta, int width = warpSize) {
      |              ^
In file included from driver.cu:5:
./kernel.cu:277:38: error: use of undeclared identifier '__activemask'
  277 |       unsigned mask  = __ballot_sync(__activemask(), (is_valid[thread_Id] &&( thread_Id < minSize)));
      |                                      ^
./kernel.cu:280:24: error: use of undeclared identifier '__shfl_sync'
  280 |       short valeShfl = __shfl_sync(mask, _prev_E, laneId - 1, 32);
      |                        ^
./kernel.cu:281:25: error: use of undeclared identifier '__shfl_sync'
  281 |       short valheShfl = __shfl_sync(mask, _prev_H, laneId - 1, 32);
      |                         ^
./kernel.cu:304:26: error: use of undeclared identifier '__shfl_sync'
  304 |       short testShufll = __shfl_sync(mask, _prev_prev_H, laneId - 1, 32);
      |                          ^
8 errors generated when compiling for gfx90a.
failed to execute:/opt/rocm-6.2.0/lib/llvm/bin/clang++  --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a  -std=c++14 -Wall -O3 -c -x hip driver.cu -o "driver.o"
make: *** [Makefile.AMD:52: driver.o] Error 1
